--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -165,3 +165,85 @@
 }
 
 /* End Theme Switcher */
+
+/* Search Bar  */
+.group {
+  display: flex;
+  line-height: 25px;
+  align-items: center;
+  position: relative;
+}
+
+.input {
+  font-family: "Poppins", sans-serif;
+  width: 100%;
+  height: 40px;
+  padding-left: 2.5rem;
+  padding-right: 0.5rem;
+  border: 0;
+  border-radius: 2px;
+  background-color: #1f2125;
+  outline: none;
+  color: #bdbecb;
+  transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
+  cursor: text;
+  z-index: 0;
+}
+
+.input::placeholder {
+  color: #bdbecb;
+}
+
+.input:hover {
+  box-shadow: 0 0 0 2.5px #1f2125, 0px 0px 25px -15px #000;
+}
+
+.input:active {
+  box-shadow: 0 0 0 2.5px #1f2125, 0px 0px 25px -15px #000;
+}
+
+.input:focus {
+  box-shadow: 0 0 0 2.5px #1f2125;
+}
+
+.search-icon {
+  position: absolute;
+  left: 1rem;
+  fill: #bdbecb;
+  width: 1rem;
+  height: 1rem;
+  z-index: 5;
+}
+/* End Search Bar  */
+
+/* project management  */
+.custom-hero-bg {
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ef6c35+48,f79621+71 */
+  /* background: linear-gradient(
+    to right,
+    rgba(239, 108, 53, 1) 48%,
+    rgba(247, 150, 33, 1) 71%
+  ); W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  background: linear-gradient(135deg, #118a7e, #0c4b5c);
+}
+
+/* end project management  */
+
+/* Custom scrollbar styles */
+.scrollbar-custom {
+  scrollbar-width: thin; /* For Firefox */
+  scrollbar-color: #333 #f0f0f0; /* Scrollbar color and track color */
+}
+
+.scrollbar-custom::-webkit-scrollbar {
+  width: 8px; /* Width of the scrollbar */
+}
+
+.scrollbar-custom::-webkit-scrollbar-track {
+  background: #f0f0f0; /* Track color */
+}
+
+.scrollbar-custom::-webkit-scrollbar-thumb {
+  background: #333; /* Scrollbar color */
+  border-radius: 4px; /* Rounded corners for the scrollbar */
+}
